// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`📸 of Input component with empty 1`] = `
<form
  className="flex items-center"
  onSubmit={[Function]}
>
  <input
    aria-label="Search"
    className="bg-white focus:outline-none focus:shadow-outline border border-gray-300 w-1/2 rounded-lg py-2 px-4 block appearance-none leading-normal"
    name="q"
    onChange={[Function]}
    placeholder="Search"
    type="text"
  />
  <button
    className="inline-block text-sm px-4 py-3 mx-3 leading-none border rounded text-white bg-black border-black lg:mt-0"
    onClick={[Function]}
  >
    Search
  </button>
</form>
`;

exports[`📸 of Input component with query 1`] = `
<form
  className="flex items-center"
  onSubmit={[Function]}
>
  <input
    aria-label="Search"
    className="bg-white focus:outline-none focus:shadow-outline border border-gray-300 w-1/2 rounded-lg py-2 px-4 block appearance-none leading-normal"
    name="q"
    onChange={[Function]}
    placeholder="Search"
    type="text"
    value="gdp"
  />
  <button
    className="inline-block text-sm px-4 py-3 mx-3 leading-none border rounded text-white bg-black border-black lg:mt-0"
    onClick={[Function]}
  >
    Search
  </button>
</form>
`;
